--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="fab_color">#FFFF0000</color>
+    <color name="default_gray">#848484</color>
+    <color name="date_background">#F1F1F1</color>
+    <color name="date_text_color">#C8C8C8</color>
 </resources>
